load("//golden/pages:all_gold_pages.bzl", "ALL_GOLD_PAGES")
load("//bazel:skia_app_container.bzl", "skia_app_container")
load(":gold_launcher.bzl", "gold_launcher")

skia_app_container(
    name = "gold_frontend_container",
    dirs = {
        "/usr/local/bin": [
            [
                "//golden/cmd/gold_frontend:gold_frontend",
                "0755",
            ],
        ],
        "/usr/local/share/frontend/dist": [
            [
                "//golden/static:favicon.ico",
                "0644",
            ],
        ] + [
            [
                "//golden/pages:production/%s.%s" % (page, ext),
                "0644",
            ]
            for page in ALL_GOLD_PAGES
            for ext in [
                "html",
                "js",
                "css",
            ]
        ],
    },
    entrypoint = "/usr/local/bin/gold_frontend",
    repository = "skia-public/gold-frontend",
)

skia_app_container(
    name = "baseline_server_container",
    dirs = {
        "/usr/local/bin": [
            [
                "//golden/cmd/baseline_server:baseline_server",
                "0755",
            ],
        ],
    },
    entrypoint = "/usr/local/bin/baseline_server",
    repository = "skia-public/gold-baseline-server",
)

skia_app_container(
    name = "diffcalculator_container",
    dirs = {
        "/usr/local/bin": [
            [
                "//golden/cmd/diffcalculator:diffcalculator",
                "0755",
            ],
        ],
    },
    entrypoint = "/usr/local/bin/diffcalculator",
    repository = "skia-public/gold-diffcalculator",
)

skia_app_container(
    name = "gitilesfollower_container",
    dirs = {
        "/usr/local/bin": [
            [
                "//golden/cmd/gitilesfollower:gitilesfollower",
                "0755",
            ],
        ],
    },
    entrypoint = "/usr/local/bin/gitilesfollower",
    repository = "skia-public/gold-gitilesfollower",
)

skia_app_container(
    name = "gold_ingestion_container",
    dirs = {
        "/usr/local/bin": [
            [
                "//golden/cmd/gold_ingestion:gold_ingestion",
                "0755",
            ],
        ],
    },
    entrypoint = "/usr/local/bin/gold_ingestion",
    repository = "skia-public/gold-ingestion",
)

skia_app_container(
    name = "periodictasks_container",
    dirs = {
        "/usr/local/bin": [
            [
                "//golden/cmd/periodictasks:periodictasks",
                "0755",
            ],
        ],
    },
    entrypoint = "/usr/local/bin/periodictasks",
    repository = "skia-public/gold-periodictasks",
)

# Runs a local Gold instance that mirrors http://gold.skia.org. It might have write access to the
# production CockroachDB database, so please exercise caution.
#
# Usage: bazel run //golden:skia_local -- path/to/client_secret.json
gold_launcher(
    name = "skia_local",
    code_review_systems = [
        {
            "id": "gerrit",
            "flavor": "gerrit",
            "gerrit_url": "https://skia-review.googlesource.com",
            "url_template": "https://skia-review.googlesource.com/%s",
        },
    ],
    default_corpus = "gm",
    gcs_bucket = "skia-infra-gm",
    git_repo_url = "https://skia.googlesource.com/skia.git",
    known_hashes_gcs_path = "skia-infra-gm/hash_files/gold-prod-hashes.txt",
    materialized_view_corpora = [
        "canvaskit",
        "colorImage",
        "gm",
        "image",
        "pathkit",
        "skp",
        "svg",
    ],
    site_url = "https://gold.skia.org",
    sql_database = "skia",
    title = "Skia Gold",
    window_size = 256,
)

# Runs a local Gold instance that mirrors http://skia-infra-gold.skia.org. It might have write
# access to the production CockroachDB database, so please exercise caution.
#
# Usage: bazel run //golden:skia_infra_local -- path/to/client_secret.json
gold_launcher(
    name = "skia_infra_local",
    code_review_systems = [
        {
            "id": "gerrit",
            "flavor": "gerrit",
            "gerrit_url": "https://skia-review.googlesource.com",
            "url_template": "https://skia-review.googlesource.com/%s",
        },
    ],
    default_corpus = "infra",
    gcs_bucket = "skia-gold-skia-infra",
    git_repo_url = "https://skia.googlesource.com/buildbot.git",
    known_hashes_gcs_path = "skia-gold-skia-infra/hash_files/gold-skia-infra-hashes.txt",
    site_url = "https://skia-infra-gold.skia.org",
    sql_database = "skiainfra",
    title = "Skia Infra Gold",
    window_size = 200,
)

# Runs a local Gold instance that mirrors http://chrome-gold.skia.org. It might have write access
# to the production CockroachDB database, so please exercise caution.
#
# Usage: bazel run //golden:chrome_local -- path/to/client_secret.json
gold_launcher(
    name = "chrome_local",
    code_review_systems = [
        {
            "id": "gerrit",
            "flavor": "gerrit",
            "gerrit_url": "https://chromium-review.googlesource.com",
            "url_template": "https://chromium-review.googlesource.com/%s",
        },
        {
            "id": "gerrit-internal",
            "flavor": "gerrit",
            "gerrit_url": "https://chrome-internal-review.googlesource.com",
            "url_template": "https://chrome-internal-review.googlesource.com/%s",
        },
    ],
    default_corpus = "android-render-tests",
    gcs_bucket = "skia-gold-chrome",
    git_repo_url = "https://chromium.googlesource.com/chromium/src",
    known_hashes_gcs_path = "skia-gold-chrome/hash_files/gold-chrome-hashes.txt",
    site_url = "https://chrome-gold.skia.org",
    sql_database = "chrome",
    title = "Chrome Gold",
    window_size = 1024,
)

# Runs a local Gold instance that mirrors http://flutter-engine-gold.skia.org. It might have write access
# to the production CockroachDB database, so please exercise caution.
#
# Usage: bazel run //golden:flutter_engine_local -- path/to/client_secret.json
gold_launcher(
    name = "flutter_engine_local",
    code_review_systems = [
        {
            "id": "github",
            "flavor": "github",
            "github_cred_path": "/dev/null",  # Most of the UI still works with no GitHub creds.
            "github_repo": "flutter/engine",
            "url_template": "https://github.com/flutter/engine/pull/%s",
        },
    ],
    default_corpus = "flutter-engine",
    gcs_bucket = "skia-gold-flutter-engine",
    git_repo_url = "https://github.com/flutter/engine",
    known_hashes_gcs_path = "skia-gold-flutter-engine/hash_files/gold-flutter-engine-hashes.txt",
    site_url = "https://flutter-engine-gold.skia.org",
    sql_database = "flutterengine",
    title = "Flutter Engine Gold",
    window_size = 200,
)
